<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        tools:context=".auth.AuthFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:srcCompat="@drawable/ic_auth_bg" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/appCompatImageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:srcCompat="@drawable/ic_auth_cover" />

        <TextView
            android:id="@+id/textView"
            style="@style/TextAppearance.Material3.HeadlineLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_welcome"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/appCompatImageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:paddingHorizontal="56dp"
            android:paddingVertical="12dp"
            android:text="@string/text_sign_in"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2"
            app:rippleColor="@color/color_primary80" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_def"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="appCompatImageView,appCompatImageView2,textView,login" />

        <!--    loading    -->
        <TextView
            android:id="@+id/textView2"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_auth_loading"
            app:layout_constraintBottom_toTopOf="@+id/linearProgressIndicator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/linearProgressIndicator"
            style="@style/Widget.Material3.LinearProgressIndicator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.5" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="textView2,linearProgressIndicator" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>